--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ main{
 
 .landing{
     min-height: 100vh;
-    background-color: #F27405;
+    background-color: #F29F05;
     background-size: cover;
     padding: 1rem 5rem;
 }
