--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,19 @@
 main{
     font-family: 'Jost', sans-serif;
 }
-
+.container {
+    display: flex;
+    
+    align-items: center;
+    
+    height: 100vh;
+    width: 100vw;
+    max-height: 800px;
+    max-width: 1280px;
+    
+    position: fixed;
+    left: 15%;
+  }
 .landing{
     min-height: 100vh;
     background-color: #F29F05;
@@ -96,4 +108,27 @@ nav{
 .hide span{
     transform: translateY(100%);
     display: inline-block;
+}
+
+/*mobile*/
+@media only screen and (max-width: 2688px) { /* max-width 640px, mobile-only styles, use when QAing mobile issues */
+    *{
+        width: auto;
+    }
+    #logo{
+        font-family: 'Lobster Two', cursive;
+        
+        font-size: 2rem;
+        color: #F2F2F2;
+    }
+    .intro-text{
+        color: #F29F05;
+        font-family: 'Jost', sans-serif;
+        font-size: 1rem;
+        margin-top: 30vh;
+        right: 50%;
+        width: fit-content;
+        
+
+    }
 }
