--- a/anim.css
+++ b/anim.css
@@ -47,13 +47,14 @@
   
   .window {
     position: relative;
-    
+    left: 30%;
     border-radius: 20px;
     height: 500px;
-    width: 80vh;
+    width: 45vh;
     overflow: hidden;
     box-shadow: 6px 6px 16px 0 rgba(217, 210, 200, 0.51),
       -6px -6px 16px 0 rgba(255, 255, 255, 0.43);
+    
   }
   
   .e1,
@@ -180,4 +181,9 @@
     }
   }
   
-  
+  @media only screen and  (max-width: 480px) {
+  .window{
+    width: 300px;
+    left: 0%;
+}
+}
